tests/semantic/invalid/38_e_method_override_bad_arity.hulk
class Parent() {
    greet() => "hello";
}
class Child() is Parent() {
    greet(name:String) => "hello " @ name;
}
print(0);
